# php-sqlx-rs

./: .gitignore  Cargo.toml  Dockerfile  PDO-EMULATOR-README.md  QUERY-BUILDER.md  README.md  docker-compose.yml  gen-interfaces.php  interfaces.php  pdo.example.php  pdo.php  php-sqlx.stubs.php  test.php
.github/workflows/: ci.yml  docs.yml
benches/: benchmark.php  benchmark.rs
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/advanced/: connection-pooling.md  prepared-queries.md  query-hooks.md  read-replicas.md  transactions.md
docs/src/augmented-sql/: conditional-blocks.md  in-clause.md  overview.md  type-safe-placeholders.md
docs/src/configuration/: driver-options.md  pool-settings.md  retry-policy.md
docs/src/core/: drivers.md  parameters.md  query-methods.md  results.md
docs/src/errors/: error-codes.md  exception-types.md
docs/src/getting-started/: connection-strings.md  installation.md  quick-start.md
docs/src/migration/: from-pdo.md  pdo-emulator.md
docs/src/query-builder/: clause-helpers.md  introduction.md  joins.md  mutations.md  select.md
docs/src/reference/: api.md  sql-syntax.md
editors/phpstorm/: IntelliLang.xml  README.md  live-templates.xml
editors/vscode/: README.md  language-configuration.json  package.json
editors/vscode/syntaxes/: sqlx-injection.tmLanguage.json  sqlx.tmLanguage.json
fuzz/: Cargo.toml  README.md
fuzz/corpus/ast_mssql/: in_clause.txt  nullable_placeholder.txt  pagination.txt  typed_placeholders.txt
fuzz/corpus/ast_mysql/: block_comment.txt  conditional_block.txt  nested_conditional.txt  string_literal.txt
fuzz/corpus/ast_postgres/: colon_param.txt  escaped_string.txt  line_comment.txt
fuzz/corpus/ast_render/: named_param.txt  not_in_clause.txt
fuzz/fuzz_targets/: ast_mssql.rs  ast_mysql.rs  ast_postgres.rs  ast_render.rs
php-sqlx-cdylib/: Cargo.toml  php-sqlx.stubs.php  sqlx.stubs.php  test.php
php-sqlx-cdylib/src/: lib.rs
src/: ast.rs  conversion.rs  driver.rs  driver_factory.rs  error.rs  identifier.rs  inner_driver.rs  interfaces.rs  lazy_row.rs  lib.rs  options.rs  paramvalue.rs  prepared_query.rs  query_builder.rs  query_hook.rs  query_result.rs  tests.rs  types.rs  utils.rs
src/ast/: mod.rs  tests.rs
src/ast/tests/: mssql.rs  mysql.rs  postgres.rs
src/by_clause/: mod.rs
src/byclause/: mod.rs
src/dbms/: mod.rs
src/dbms/mssql/: conversion.rs  inner.rs  mod.rs  prepared_query.rs  query_builder.rs  query_result.rs  read_query_builder.rs  tests.rs  write_query_builder.rs
src/dbms/mysql/: conversion.rs  inner.rs  mod.rs  prepared_query.rs  query_builder.rs  query_result.rs  read_query_builder.rs  tests.rs  write_query_builder.rs
src/dbms/postgres/: conversion.rs  copy.rs  inner.rs  mod.rs  prepared_query.rs  query_builder.rs  query_result.rs  read_query_builder.rs  tests.rs  write_query_builder.rs
src/driver/: conversion.rs  inner.rs  mod.rs  options.rs
src/driver/conversion/: mod.rs  mysql.rs  postgres.rs
src/driver/mysql/: conversion.rs  inner.rs  mod.rs  options.rs  prepared_query.rs
src/driver/mysql/ast/: mod.rs  tests.rs
src/driver/postgres/: conversion.rs  inner.rs  mod.rs  options.rs  prepared_query.rs
src/driver/postgres/ast/: mod.rs  tests.rs
src/fieldsclause/: mod.rs
src/mssql/: conversion.rs  inner.rs  mod.rs  prepared_query.rs  query_builder.rs  tests.rs
src/mysql/: conversion.rs  inner.rs  mod.rs  options.rs  prepared_query.rs  query_builder.rs  tests.rs
src/mysql/ast/: mod.rs  tests.rs
src/orderby/: mod.rs
src/paginate_clause/: mod.rs
src/paginateclause/: mod.rs
src/param_value/: conversion.rs  json.rs  mod.rs  quote.rs  utils.rs  write.rs
src/postgres/: conversion.rs  inner.rs  mod.rs  options.rs  prepared_query.rs  query_builder.rs  tests.rs
src/postgres/ast/: mod.rs  tests.rs
src/query_builder/: mod.rs
src/select_clause/: mod.rs
src/selectclause/: mod.rs
src/tests/: mod.rs
src/utils/: hashmap_fold.rs  ident.rs  indent_sql.rs  mod.rs  strip_prefix.rs  types.rs
tests/: bootstrap.php  composer.json  phpunit.xml
tests/Integration/: AbstractDriverTest.php
tests/Integration/MSSQL/: MSSQLDriverTest.php
tests/Integration/MySQL/: MySQLDriverTest.php
tests/Integration/PostgreSQL/: PostgreSQLDriverTest.php
tests/Integration/QueryBuilder/: AbstractQueryBuilderTest.php  MySQLQueryBuilderTest.php  PostgreSQLQueryBuilderTest.php
