[package]
name = "php-sqlx"
version = "0.1.0"
edition = "2024"
description = "A modern feature-rich SQL driver for PHP."

[dependencies]
anyhow = "1.0.98"
dashmap = "6.1.0"
ext-php-rs = { git = "https://github.com/davidcole1340/ext-php-rs", branch = "master", features = ["anyhow"] }
#ext-php-rs = {path = "ext-php-rs", features = ["anyhow"] }
itertools = "0.14.0"
parse_duration = "2.1.1"
serde_json = "1.0.140"
simd-json = { optional = true, version = "0.15.1" }
#sqlx-oldapi = { path = "sqlx-oldapi", features = ["json", "runtime-tokio-rustls"] }`
sqlx-oldapi = { git = "https://github.com/sqlpage/sqlx-oldapi", branch = "main", features = ["json", "runtime-tokio-rustls"] }
threadsafe-lru = "0.1.2"
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
trim-in-place = "0.1.7"

[features]
experimental = []
default = [
    "postgres",
    "mysql",
    "mssql",
    "lazy-row",
    "experimental",
    "simd-json"
]
postgres = ["sqlx-oldapi/postgres"]
mysql = ["sqlx-oldapi/mysql"]
mssql = ["sqlx-oldapi/mssql"]
simd-json = ["simd-json/default"]
lazy-row = []

[dev-dependencies]
criterion = "0.6.0"

[[bench]]
name = "benchmark"
harness = false
