[package]
name = "php-sqlx"
version = "0.1.0"
edition = "2024"
description = "A modern feature-rich SQL driver for PHP."

[dependencies]
anyhow = "1.0"
dashmap = "6.1.0"
ext-php-rs = { git = "https://github.com/davidcole1340/ext-php-rs", branch = "master", features = ["anyhow"] }
#ext-php-rs = { git = "https://github.com/kakserpom/ext-php-rs", branch = "pending_mrs", features = ["anyhow"] }
#ext-php-rs = { path = "ext-php-rs", features = ["anyhow"] }
itertools = "0.14"
mimalloc = { version = "0.1", optional = true }
parse_duration = "2.1.1"
serde_json = "1.0"
simd-json = { optional = true, version = "0.16" }
#sqlx-oldapi = { path = "sqlx-oldapi", features = ["json", "runtime-tokio-rustls"] }`
sqlx-oldapi = { git = "https://github.com/sqlpage/sqlx-oldapi", branch = "main", features = ["json", "runtime-tokio-rustls"] }
threadsafe-lru = "0.1"
tokio = { version = "1.48", features = ["rt-multi-thread"] }
trim-in-place = "0.1.7"
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.27", features = ["derive", "strum_macros"] }
strum_macros = "0.27"
url = "2.5.4"

[features]
default = [
    "postgres",
    "mysql",
    "mssql",
    "lazy-row",
    "experimental",
    "simd-json",
    "mimalloc"
]
postgres = ["sqlx-oldapi/postgres"]
mysql = ["sqlx-oldapi/mysql"]
mssql = ["sqlx-oldapi/mssql"]
simd-json = ["simd-json/default"]
lazy-row = []
experimental = []
mimalloc = ["dep:mimalloc"]

[dev-dependencies]
collapse = "0.1.2"
criterion = "0.7"

[[bench]]
name = "benchmark"
harness = false
