[package]
name = "php-sqlx"
version = "0.1.0"
edition = "2024"
description = "A modern feature-rich SQL driver for PHP."

[dependencies]
dashmap = "6.1.0"
#ext-php-rs = "0.15"
ext-php-rs = { git = "https://github.com/extphprs/ext-php-rs", branch = "master" }
#ext-php-rs = { path = "ext-php-rs" }
itertools = "0.14"
mimalloc = { version = "0.1", optional = true }
parse_duration = "2.1.1"
serde_json = "1.0"
simd-json = { optional = true, version = "0.17.0" }
#sqlx-oldapi = { path = "sqlx-oldapi", features = ["json", "runtime-tokio-rustls"] }`
sqlx-oldapi = { git = "https://github.com/sqlpage/sqlx-oldapi", branch = "main", features = ["json", "runtime-tokio-rustls", "chrono", "uuid"] }
chrono = "0.4"
uuid = "1"
threadsafe-lru = "0.1"
tokio = { version = "1.48", features = ["rt-multi-thread"] }
trim-in-place = "0.1.7"
serde = { version = "1.0", features = ["derive"] }
strum_macros = "0.27"
url = "2.5.4"

[features]
default = [
    "postgres",
    "mysql",
    "mssql",
    "lazy-row",
    "experimental",
    "simd-json",
    "mimalloc"
]
postgres = ["sqlx-oldapi/postgres"]
mysql = ["sqlx-oldapi/mysql"]
mssql = ["sqlx-oldapi/mssql"]
simd-json = ["simd-json/default"]
lazy-row = []
experimental = []
mimalloc = ["dep:mimalloc"]

[dev-dependencies]
collapse = "0.1.2"
criterion = "0.8.1"

[[bench]]
name = "benchmark"
harness = false

# Patch clang-sys and bindgen for preserve_none calling convention support (libclang 19/20)
# Required for PHP 8.5+ on macOS ARM64 which uses TAILCALL VM mode
# - clang-sys: Adds libclang 19/20 bindings (https://github.com/KyleMayes/clang-sys/pull/195)
# - bindgen: Maps CXCallingConv_PreserveNone to C ABI
[patch.crates-io]
clang-sys = { git = "https://github.com/extphprs/clang-sys.git", branch = "preserve-none-support" }
bindgen = { git = "https://github.com/extphprs/rust-bindgen.git", branch = "preserve-none-support" }
