[package]
name = "php-sqlx-cdylib"
version = "0.1.0"
edition = "2024"

[dependencies]
php-sqlx = { path = ".." }

[lib]
crate-type = ["cdylib"]

# Patch clang-sys and bindgen for preserve_none and Swift calling convention support
[patch.crates-io]
clang-sys = { git = "https://github.com/extphprs/clang-sys.git", branch = "preserve-none-support" }
bindgen = { git = "https://github.com/extphprs/rust-bindgen.git", branch = "preserve-none-support" }
